# public_knowledge_base

./: .gitignore  fuel_gauge.py  pyproject.toml  test.db  test.py
python/bootcamp_jornada_dados/: bonus.py
python/bootcamp_jornada_dados/aula01a06/: anotacoes_aula01a06.md  exercicios_aula2.py
python/bootcamp_jornada_dados/aula07/: anotacoes_aula07.md  etl_vendas.py
python/bootcamp_jornada_dados/aula08a10/: anotacoesaula08a10.md
python/bootcamp_jornada_dados/aula17/: desafio_sqlalchemy.db
python/bootcamp_jornada_dados/aula18/: anotacoes_aula18.md
python/bootcamp_jornada_dados/aula19/: apiaula19.py
python/bootcamp_python/aula01a06/: exercicios_aula2.py
python/bootcamp_python/aula17/: desafio_sqlalchemy.db
python/cs50/: adieu.py  bank.py  bitcoin.py  camel.py  coke.py  deep.py  einsten.py  emojize.py  extensions.py  faces.py  figlet.py  fuel.py  game.py  grocery.py  indoor.py  interpreter.py  lines.py  lines.txt  meal.py  nutrition.py  pizza.py  plates.py  playback.py  poo.py  professor.py  taqueria.py  test_bank.py  test_fuel.py  test_plates.py  test_twttr.py  tip.py  twttr.py
python/desbravando_pandas_teo/: anotacoes_desbravando_pandas_teo.md  exemplos.py
python/python exercises/: dictionaries.py
sql/bootcamp_sql_jornada_dados/: anotacoes_bootcamp_sql_jornada_dados.md
sql/project_sql_gc/: README.md  etl.py  gc_query.sql
sql/window_functions_exercises/: README.md  cellphones.csv  phones.db  query1.sql  query2.sql  query3.sql  query4.sql  query5.sql
sql_window_functions/: query1.sql  query2.sql  query3.sql  query4.sql  query5.sql
(+39 files in other folders)
