[tool.poetry]
name = "public-knwoledge-base"
version = "0.1.0"
description = "Repo to record my studies and exercises in python and sql"
authors = ["Thales <thalesluizbraga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
babel = "^2.14.0"
pandas = "^2.2.1"
black = "^24.2.0"
pyarrow = "^15.0.0"
tabulate = "^0.9.0"
sqlalchemy = "^2.0.28"
requests = "^2.31.0"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
